✨ feat: comics page component added.

--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- <mt-header></mt-header> -->
+<cms-header></cms-header>
 
 <main [@fadeAnimation]="getRouterOutletState(o)">
   <router-outlet class="main" #o="outlet"></router-outlet>
