--- a/front-end/src/sass/_variables.scss
+++ b/front-end/src/sass/_variables.scss
@@ -31,8 +31,8 @@ $color-success: #{"var(--color-success)"};
 $color-icon: #{"var(--color-icon)"};
 
 $project-colors: (
-  "primary": #dd4b39,
-  "background": #ecf0f5,
+  "primary": #27ae61,
+  "background": #f3f2f7,
   "text": #444,
   "link": #6ba8c7,
   // "panel-bg": #e7e7e7,
