--- a/front-end/src/app/components/header/header.component.html
+++ b/front-end/src/app/components/header/header.component.html
@@ -2,13 +2,15 @@
   <nav class="menu">
     <ul class="menu__list">
       <li class="list__item">
-        <a class="list__item__link" routerLink="/"><strong>Meat</strong></a>
+        <a class="list__item__link" routerLink="/"
+          ><strong>Comics ++</strong></a
+        >
       </li>
       <li class="list__item" routerLinkActive="list__item--active">
-        <a class="list__item__link" routerLink="/restaurants">Restaurants</a>
+        <a class="list__item__link" routerLink="/restaurants">Livros</a>
       </li>
       <li class="list__item" routerLinkActive="list__item--active">
-        <a class="list__item__link" routerLink="/about">About</a>
+        <a class="list__item__link" routerLink="/about">Sobre</a>
       </li>
     </ul>
   </nav>
