✨ feat: about component.

--- a/front-end/src/app/components/header/header.component.html
+++ b/front-end/src/app/components/header/header.component.html
@@ -7,7 +7,7 @@
         >
       </li>
       <li class="list__item" routerLinkActive="list__item--active">
-        <a class="list__item__link" routerLink="/restaurants">Livros</a>
+        <a class="list__item__link" routerLink="/comics">Livros</a>
       </li>
       <li class="list__item" routerLinkActive="list__item--active">
         <a class="list__item__link" routerLink="/about">Sobre</a>
