--- a/front-end/src/app/components/header/header.component.html
+++ b/front-end/src/app/components/header/header.component.html
@@ -7,10 +7,10 @@
         >
       </li>
       <li class="list__item" routerLinkActive="list__item--active">
-        <a class="list__item__link" routerLink="/comics">Livros</a>
+        <a class="list__item__link" routerLink="/livros">Livros</a>
       </li>
       <li class="list__item" routerLinkActive="list__item--active">
-        <a class="list__item__link" routerLink="/about">Sobre</a>
+        <a class="list__item__link" routerLink="/sobre">Sobre</a>
       </li>
     </ul>
   </nav>
