💎 style: comic component.

--- a/front-end/src/app/components/header/header.component.html
+++ b/front-end/src/app/components/header/header.component.html
@@ -12,6 +12,9 @@
       <li class="list__item" routerLinkActive="list__item--active">
         <a class="list__item__link" routerLink="/sobre">Sobre</a>
       </li>
+      <li class="list__item" routerLinkActive="list__item--active">
+        <a class="list__item__link" routerLink="/admin">Admin</a>
+      </li>
     </ul>
   </nav>
   <cms-toggle-theme></cms-toggle-theme>
