💎 style: temporary home style.

--- a/front-end/src/app/pages/home/home.component.html
+++ b/front-end/src/app/pages/home/home.component.html
@@ -1,1 +1,9 @@
-<p>home works!</p>
+<section class="panel">
+  <h1 class="panel__title">Bem vindo ao Comics++</h1>
+  <p class="panel__subtitle">
+    Are you hungry? Take an order and receive at home
+  </p>
+  <a routerLink="/livros" class="panel__button">
+    <strong>Ver Livros</strong>
+  </a>
+</section>
