✨ feat: angular material added.

--- a/front-end/src/app/components/header/header.component.html
+++ b/front-end/src/app/components/header/header.component.html
@@ -17,5 +17,8 @@
       </li>
     </ul>
   </nav>
+  <div class="cart">
+    <i matBadge="1" class="fas fa-shopping-cart" style="font-size: 20px"></i>
+  </div>
   <cms-toggle-theme></cms-toggle-theme>
 </header>
