--- a/front-end/src/sass/_mixins.scss
+++ b/front-end/src/sass/_mixins.scss
@@ -1,4 +1,4 @@
-@mixin flex-center($direction: "row") {
+@mixin flex-center($direction: row) {
   display: flex;
   flex-direction: $direction;
   justify-content: center;
