--- a/front-end/src/styles.scss
+++ b/front-end/src/styles.scss
@@ -52,3 +52,6 @@ body {
   margin: 0;
   font-family: $font-primary;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
