--- a/front-end/src/sass/_variables.scss
+++ b/front-end/src/sass/_variables.scss
@@ -71,7 +71,7 @@ $project-colors-theme-dark: (
 // Measures
 // ==========================================================================
 
-$global-max-width: 1200px;
+$global-max-width: rem(1440);
 
 $global-font-size: rem(18);
 $global-line-height: 1.5;
