--- a/front-end/src/app/components/header/header.component.scss
+++ b/front-end/src/app/components/header/header.component.scss
@@ -16,6 +16,7 @@
   justify-content: space-between;
   margin: 0 auto;
   max-width: $global-max-width;
+  padding: rem(0 40);
   width: 100%;
 
   &__tools {
