--- a/front-end/src/app/pages/about/about.component.scss
+++ b/front-end/src/app/pages/about/about.component.scss
@@ -3,7 +3,7 @@
 @import "../../../sass/functions";
 
 .about {
-  padding: 20px 0px;
+  // padding: 20px 40px;
 
   &__title {
     color: $color-panel-text;
