💎 style: comics page mobile styles.

--- a/front-end/src/app/components/header/header.component.html
+++ b/front-end/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="header">
   <nav class="menu">
     <ul class="menu-list">
-      <li class="menu-list__item">
+      <li class="menu-list__item logo">
         <a class="menu-list__link" routerLink="/"><strong>Comics ++</strong></a>
       </li>
       <li class="menu-list__item" routerLinkActive="menu-list__item--active">
