--- a/front-end/src/app/app.component.scss
+++ b/front-end/src/app/app.component.scss
@@ -1,6 +1,7 @@
 @import "../sass/variables";
 @import "../sass/mixins";
 @import "../sass/functions";
+@import "../sass/media";
 
 :host {
   display: flex;
@@ -26,6 +27,10 @@
       width: 100%;
       max-width: $global-max-width;
       padding: rem(20 40);
+
+      @include medias($tiny-mobile, $mobile, $small-tablet, $tablet) {
+        padding: rem(10);
+      }
 
       // @include flex-center;
     }
