--- a/front-end/src/app/components/comic/comic.component.scss
+++ b/front-end/src/app/components/comic/comic.component.scss
@@ -1,6 +1,7 @@
 @import "../../../sass/variables";
 @import "../../../sass/mixins";
 @import "../../../sass/functions";
+@import "../../../sass/media";
 
 .comic {
   background-color: $color-panel-bg;
@@ -10,6 +11,26 @@
   width: rem(400);
   height: 100%;
   padding: rem(10 10 10 130);
+
+  @include tiny-mobile {
+    width: 100%;
+  }
+
+  @include mobile {
+    width: 100%;
+  }
+
+  @include small-tablet {
+    width: 100%;
+  }
+
+  @include tablet {
+    width: rem(320);
+  }
+
+  @include large-tablet {
+    width: rem(330);
+  }
 
   &__image {
     @include size(100, 140);
@@ -26,6 +47,10 @@
     position: absolute;
     left: rem(12);
     bottom: rem(20);
+
+    @include tiny-mobile {
+      font-size: rem(20);
+    }
   }
 
   &__title {
@@ -43,6 +68,13 @@
 
     align-items: center;
     padding: rem(10 0);
+
+    @include tiny-mobile {
+      flex-direction: column;
+      align-items: flex-end;
+      justify-content: space-between;
+      height: 91px;
+    }
   }
 
   &__btn {
@@ -50,6 +82,14 @@
     width: rem(90);
     height: rem(20);
     font-size: rem(12);
+
+    @include tablet {
+      width: rem(80);
+    }
+
+    @include small-tablet {
+      width: rem(80);
+    }
   }
 
   &__btn + &__btn {
