✨ feat: shopping-cart component.

--- a/front-end/src/app/components/header/header.component.html
+++ b/front-end/src/app/components/header/header.component.html
@@ -18,7 +18,9 @@
   <div class="header__tools">
     <cms-toggle-theme style="margin-right: 20px"></cms-toggle-theme>
 
-    <button
+    <cms-shopping-cart></cms-shopping-cart>
+
+    <!-- <button
       class="header__cart"
       mat-icon-button
       [matMenuTriggerFor]="menu"
@@ -34,6 +36,6 @@
       >
         <cms-shopping-cart></cms-shopping-cart>
       </div>
-    </mat-menu>
+    </mat-menu> -->
   </div>
 </header>
