--- a/front-end/src/app/pages/comic-detail/comic-detail.component.html
+++ b/front-end/src/app/pages/comic-detail/comic-detail.component.html
@@ -45,7 +45,7 @@
     <span class="comic__inventory">Disponibilidade: Em estoque</span>
     <mat-form-field>
       <mat-label>Quantidade</mat-label>
-      <input type="number" matInput placeholder="Ex. Pizza" value="Sushi" />
+      <input min="1" value="1" type="number" matInput />
     </mat-form-field>
     <div class="comic__btn-container">
       <button class="comic__btn">
