--- a/front-end/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/front-end/src/app/components/shopping-cart/shopping-cart.component.html
@@ -11,7 +11,11 @@
   <div (click)="$event.stopPropagation()" (keydown)="$event.stopPropagation()">
     <div class="cart" (click)="$event.stopPropagation()">
       <div *ngIf="hasItems" class="cart__content">
-        <div *ngFor="let item of items$ | async" class="cart__item">
+        <div
+          *ngFor="let item of items$ | async"
+          class="cart__item"
+          [@row]="itemState"
+        >
           <img [src]="item.comic.imagePath" alt="" class="cart__item__image" />
 
           <div class="cart__group">
