--- a/front-end/src/app/pages/comic-detail/comic-detail.component.scss
+++ b/front-end/src/app/pages/comic-detail/comic-detail.component.scss
@@ -89,6 +89,13 @@
   &__btn {
     @include base-button-style;
     width: rem(150);
+
+    &:disabled {
+      border: 1px solid #999999;
+      background-color: #cccccc;
+      color: #666666;
+      cursor: not-allowed;
+    }
   }
 }
 
