--- a/front-end/src/app/pages/comic-detail/comic-detail.component.html
+++ b/front-end/src/app/pages/comic-detail/comic-detail.component.html
@@ -62,14 +62,20 @@
         <i class="fas fa-shopping-cart"></i>
         Adicionar
       </button>
-      <button
+      <!-- <button
         [disabled]="!hasCartItems"
-        [routerLink]="['/livros', comic.id]"
+        (click)="navigateToOrder()"
         class="comic__btn"
       >
         <i class="fas fa-credit-card"></i>
         Finalizar pedido
-      </button>
+      </button> -->
+      <a [class.disabled]="!hasCartItems ? true : false" routerLink="/order">
+        <button [disabled]="!hasCartItems" class="comic__btn">
+          <i class="fas fa-credit-card"></i>
+          Finalizar pedido
+        </button>
+      </a>
     </div>
   </form>
 </div>
