📦 refactor: prevent api call.

--- a/front-end/src/app/pages/order/order.component.html
+++ b/front-end/src/app/pages/order/order.component.html
@@ -132,7 +132,7 @@
       <legend>Método de Pagamento:</legend>
       <mat-radio-group formControlName="paymentMethod">
         <mat-radio-button value="1">Dinheiro</mat-radio-button>
-        <mat-radio-button value="2">Cartão de Crédito Card</mat-radio-button>
+        <mat-radio-button value="2">Cartão de Crédito</mat-radio-button>
         <mat-radio-button value="3">Boleto</mat-radio-button>
       </mat-radio-group>
     </fieldset>
